tests/baselines/reference/awaitUsingDeclarations.3(target=es2015).errors.txt
awaitUsingDeclarations.3.ts(2,5): error TS2854: Top-level 'await using' statements are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', 'node18', 'nodenext', or 'preserve', and the 'target' option is set to 'es2017' or higher.


==== awaitUsingDeclarations.3.ts (1 errors) ====
    {
        await using d1 = { async [Symbol.asyncDispose]() {} },
        ~~~~~
!!! error TS2854: Top-level 'await using' statements are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', 'node18', 'nodenext', or 'preserve', and the 'target' option is set to 'es2017' or higher.
                    d2 = null,
                    d3 = undefined,
                    d4 = { [Symbol.dispose]() {} };
    }
    
    export {};